Fixed bug related to charts not showing in server. Deleted unnecessary backend vendor files for drag and drop.

--- a/resources/assets/sass/style-extras.scss
+++ b/resources/assets/sass/style-extras.scss
@@ -987,6 +987,7 @@ table {
     }
 }
 .show-proposal-page {
+
     .page-content {
         padding-bottom: 10px;
         background-color: #F1F5F7;
@@ -1010,6 +1011,17 @@ table {
         text-align: center;
     }
 }
+@media (min-width: 480px){
+    .show-proposal-page {
+        .navbar-header {
+            float: none;
+        }
+        .clearfix::before, .clearfix::after, .dl-horizontal dd::before, .dl-horizontal dd::after, .container::before, .container::after, .container-fluid::before, .container-fluid::after, .row::before, .row::after, .form-horizontal .form-group::before, .form-horizontal .form-group::after, .btn-toolbar::before, .btn-toolbar::after, .btn-group-vertical > .btn-group::before, .btn-group-vertical > .btn-group::after, .nav::before, .nav::after, .navbar::before, .navbar::after, .navbar-header::before, .navbar-header::after, .navbar-collapse::before, .navbar-collapse::after, .pager::before, .pager::after, .panel-body::before, .panel-body::after, .modal-footer::before, .modal-footer::after, #topbar::before, #topbar::after {
+            content: none;
+        }
+    }
+}
+
 .table-bordered > tfoot > tr.no-border > td {
     font-weight: bold;
     padding-top: 20px;
